[gd_scene load_steps=8 format=3 uid="uid://dsxp66pw4wbs1"]

[ext_resource type="Script" uid="uid://ng7xedtg24ku" path="res://Scripts/Tiles/tile.gd" id="1_86yt2"]
[ext_resource type="Material" uid="uid://dlbxe65gfqva3" path="res://Textures/UnboughtLand.tres" id="2_3opfv"]

[sub_resource type="BoxMesh" id="BoxMesh_76jdb"]
size = Vector3(6, 1, 6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_86yt2"]
albedo_color = Color(0.412152, 0.412152, 0.412152, 1)

[sub_resource type="BoxMesh" id="BoxMesh_86yt2"]
size = Vector3(6, 3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_86yt2"]

[sub_resource type="BoxMesh" id="BoxMesh_3opfv"]
size = Vector3(6, 1, 6)

[node name="Ground_Tile" type="Node3D"]
script = ExtResource("1_86yt2")

[node name="Concrete" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_76jdb")
surface_material_override/0 = SubResource("StandardMaterial3D_86yt2")

[node name="Walls" type="Node3D" parent="."]

[node name="up" type="MeshInstance3D" parent="Walls" groups=["Wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -2.5)
mesh = SubResource("BoxMesh_86yt2")

[node name="up" type="Area3D" parent="Walls/up"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/up/up"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -3)
shape = SubResource("BoxShape3D_86yt2")

[node name="Next_Tile" type="MeshInstance3D" parent="Walls/up"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, -3.5)
mesh = SubResource("BoxMesh_3opfv")
surface_material_override/0 = ExtResource("2_3opfv")

[node name="down" type="MeshInstance3D" parent="Walls" groups=["Wall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 2.5)
mesh = SubResource("BoxMesh_86yt2")

[node name="down" type="Area3D" parent="Walls/down"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, -2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/down/down"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 3)
shape = SubResource("BoxShape3D_86yt2")

[node name="Next_Tile" type="MeshInstance3D" parent="Walls/down"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 3.5)
mesh = SubResource("BoxMesh_3opfv")
surface_material_override/0 = ExtResource("2_3opfv")

[node name="left" type="MeshInstance3D" parent="Walls" groups=["Wall"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.5, 2.5, 1.09278e-07)
mesh = SubResource("BoxMesh_86yt2")

[node name="left" type="Area3D" parent="Walls/left"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -2.5, 2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/left/left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2.5, 0)
shape = SubResource("BoxShape3D_86yt2")

[node name="Next_Tile" type="MeshInstance3D" parent="Walls/left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, -3.5)
mesh = SubResource("BoxMesh_3opfv")
surface_material_override/0 = ExtResource("2_3opfv")

[node name="right" type="MeshInstance3D" parent="Walls" groups=["Wall"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.5, 2.5, -1.09278e-07)
mesh = SubResource("BoxMesh_86yt2")

[node name="right" type="Area3D" parent="Walls/right"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -2.5, -2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/right/right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2.5, 0)
shape = SubResource("BoxShape3D_86yt2")

[node name="Next_Tile" type="MeshInstance3D" parent="Walls/right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.0598e-07, -2, 3.5)
mesh = SubResource("BoxMesh_3opfv")
surface_material_override/0 = ExtResource("2_3opfv")

[connection signal="area_entered" from="Walls/up/up" to="." method="_on_up_area_entered"]
[connection signal="area_entered" from="Walls/down/down" to="." method="_on_down_area_entered"]
[connection signal="area_entered" from="Walls/left/left" to="." method="_on_left_area_entered"]
[connection signal="area_entered" from="Walls/right/right" to="." method="_on_right_area_entered"]
